[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2021"
keywords = ["hdf", "async", "concurrency"]
license = "LGPL-3.0-or-later"
name = "hidefix"
repository = "https://github.com/gauteh/hidefix"
description = "Concurrent HDF5 and NetCDF4 reader (experimental)"
version = "0.11.1"
categories = [ "filesystem", "parsing", "science" ]

[lib]
name = "hidefix"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
bincode = { version = "1", optional = true }
byte-slice-cast = "1"
byteorder = "1"
bytes = "1"
flexbuffers = { version = "2", optional = true }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
itertools = "0.13"
libdeflater = "1.21"
lru = "0.12"
serde_bytes = "0.11"
strength_reduce = "0.2"
zerocopy = "0.7"
libc = "0.2"
hdf5 = { package = "hdf5-metno", version = "0.9.1" }
log = "0.4"
rayon = "1.10"
ndarray = { version = "0.16", features = [ "rayon" ] }
# Remove when https://github.com/PyO3/rust-numpy/pull/439 is addressed
ndarray_0_15 = { package = "ndarray", version = "0.15", features = ["rayon"] }
pyo3 = { version = "0.21", optional = true, features = ["anyhow", "auto-initialize", "abi3-py39"] }
numpy = { version = "0.21.0", optional = true }
netcdf = { version = "0.10.4", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
clap = { version = "4.5.16", features = ["derive"], optional = true }


[dev-dependencies]
divan = "0.1.14"
rand = "0.8"
sled = "0.34.7"
reqwest = { version = "0.12", features = [ "blocking" ] }
flexbuffers = "2"
bincode = "1"

[profile.release]
lto = 'thin'
codegen-units = 1
debug = true

[features]
default = ["static", "netcdf"]
netcdf = ["dep:netcdf"]
static = ["hdf5/static", "hdf5/zlib", "netcdf?/static"]
python = ["dep:pyo3", "dep:numpy"]
extension-module = ["python", "pyo3/extension-module"]
unstable = []
flexbuffers = ["dep:flexbuffers"]
clap = ["dep:clap"]
bincode = ["dep:bincode"]

[[bin]]
name = "hfxlst"
required-features = ["clap"]

[[bin]]
name = "hfxidx"
required-features = ["clap"]

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "dataset"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "large"
harness = false

[[bench]]
name = "native"
harness = false

[[bench]]
name = "norkyst"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "serialize"
harness = false

[[bench]]
name = "stream"
harness = false
