[package]
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
edition = "2021"
keywords = ["hdf", "async", "concurrency"]
license = "LGPL-3.0-or-later"
name = "hidefix"
repository = "https://github.com/gauteh/hidefix"
description = "Concurrent HDF5 and NetCDF4 reader (experimental)"
version = "0.12.0"
categories = [ "filesystem", "parsing", "science" ]

[lib]
name = "hidefix"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
bincode = { version = "1.3.3", optional = true }
byte-slice-cast = "1.2.3"
bytes = "1.10.1"
flexbuffers = { version = "25.2.10", optional = true }
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
itertools = "0.14.0"
libdeflater = "1.24.0"
lru = "0.14.0"
serde_bytes = "0.11.17"
strength_reduce = "0.2.4"
zerocopy = "0.8.25"
libc = "0.2.172"
hdf5 = { package = "hdf5-metno", version = "0.10.1" }
log = "0.4.27"
rayon = "1.10.0"
ndarray = { version = "0.16.1", features = [ "rayon" ] }
pyo3 = { version = "0.25.0", optional = true, features = ["anyhow", "auto-initialize", "abi3-py39"] }
numpy = { version = "0.25.0", optional = true }
netcdf = { version = "0.11.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["sync", "macros", "rt-multi-thread"] }
clap = { version = "4.5.38", features = ["derive"], optional = true }


[dev-dependencies]
divan = "0.1.21"
rand = "0.9.1"
sled = "0.34.7"
reqwest = { version = "0.12.15", features = [ "blocking" ] }
flexbuffers = "25.2.10"
bincode = "1.3.3"
byteorder = "1.5.0"

[profile.release]
lto = 'thin'
codegen-units = 1
debug = true

[features]
default = ["static", "netcdf"]
netcdf = ["dep:netcdf"]
static = ["hdf5/static", "hdf5/zlib", "netcdf?/static"]
python = ["dep:pyo3", "dep:numpy"]
extension-module = ["python", "pyo3/extension-module"]
unstable = []
flexbuffers = ["dep:flexbuffers"]
clap = ["dep:clap"]
bincode = ["dep:bincode"]

[[bin]]
name = "hfxlst"
required-features = ["clap"]

[[bin]]
name = "hfxidx"
required-features = ["clap"]

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "dataset"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "large"
harness = false

[[bench]]
name = "native"
harness = false

[[bench]]
name = "norkyst"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "serialize"
harness = false

[[bench]]
name = "stream"
harness = false
